Fri Feb  5 01:05:43 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* ccdefname.c (get_from_os): On the Windows platform,
		automatically generate the correct default cache name
		based on what krb5_cc_dfl_ops is set to.

	* realm_dom.c (krb5_get_realm_domain): Add modifiers so that this
		function can get exported in a Windows DLL.

Tue Feb  2 16:01:58 1999  Tom Yu  <tlyu@mit.edu>

	* read_pwd.c: Remove reference to CPP symbol "unix".

1999-01-29  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* ccdefname.c: Add a new function krb5_cc_set_default_name(),
		which is used set the default ccname stored in the
		krb5_context.  All of the OS-specific functions to
		determine the default ccname is moved to this function.
		The krb5_cc_default_name() function now just reads the
		default ccname from the os_context, and will call
		krb5_cc_set_default_name() to set the default ccname if
		necessary.

	* t_std_conf: Added functions to test krb5_cc_default_name and
		krb5_cc_set_default_name().  Fixed the call to
		krb5_locate_kdc to support the new variables added by
		the Cygnus initial ticket API merge.

1999-01-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* localaddr.c: On the macintosh, check to see if getmyipaddr
		returns NULL, and return an error in that case.

Tue Jan  5 00:11:49 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* sn2princ.c (krb5_sname_to_principal): Windows NT5's broken
 	 	 resolver gratuitously tacks on a trailing period to the
 	 	 hostname (at least it does in Beta2).  Deal with this
 	 	 brain-damage.

Tue Dec 22 01:22:24 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* changepw.c: Add a test for _WIN16 as well as _WIN32 for sockets
 		workaround (in case we do want to build the 16 bit library
 		again someday)

Sat Dec  5 01:12:25 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* localaddr.c: Added missing KRB5_DLLIMP and KRB5_CALLCONF macros
		from the function definition.

1998-12-04  Theodore Ts'o  <tytso@rsts-11.mit.edu>
